test/calc.output
   0  $accept : stmt_list $end

   1  stmt_list :
   2            | stmt_list stmt

   3  stmt : terminator
   4       | expr terminator
   5       | error terminator

   6  terminator : ';'
   7             | '\n'

   8  expr : '(' expr ')'
   9       | expr '|' expr
  10       | expr '&' expr
  11       | expr EQ expr
  12       | expr NE expr
  13       | expr GT expr
  14       | expr GE expr
  15       | expr LT expr
  16       | expr LE expr
  17       | expr L_SHIFT expr
  18       | expr R_SHIFT expr
  19       | expr '+' expr
  20       | expr '-' expr
  21       | expr '*' expr
  22       | expr '/' expr
  23       | expr EXP expr
  24       | expr '!'
  25       | '-' expr
  26       | '!' expr
  27       | '+' expr
  28       | '&' STRING
  29       | IDENT '=' expr
  30       | IDENT
  31       | INT
  32       | FLOAT
  33       | STRING
  34       | '%'

state 0
	$accept : . stmt_list $end  (0)
	stmt_list : .  (1)

	.  reduce 1

	stmt_list  goto 1


state 1
	$accept : stmt_list . $end  (0)
	stmt_list : stmt_list . stmt  (2)

	$end  accept
	error  shift 2
	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	';'  shift 11
	'\n'  shift 12
	'('  shift 13
	'%'  shift 14
	.  error

	stmt  goto 15
	terminator  goto 16
	expr  goto 17


state 2
	stmt : error . terminator  (5)

	';'  shift 11
	'\n'  shift 12
	.  error

	terminator  goto 18


state 3
	expr : INT .  (31)

	.  reduce 31


state 4
	expr : FLOAT .  (32)

	.  reduce 32


state 5
	expr : STRING .  (33)

	.  reduce 33


state 6
	expr : IDENT . '=' expr  (29)
	expr : IDENT .  (30)

	'='  shift 19
	'|'  reduce 30
	'&'  reduce 30
	EQ  reduce 30
	NE  reduce 30
	GT  reduce 30
	GE  reduce 30
	LT  reduce 30
	LE  reduce 30
	L_SHIFT  reduce 30
	R_SHIFT  reduce 30
	'+'  reduce 30
	'-'  reduce 30
	'*'  reduce 30
	'/'  reduce 30
	EXP  reduce 30
	'!'  reduce 30
	';'  reduce 30
	'\n'  reduce 30
	')'  reduce 30


state 7
	expr : '&' . STRING  (28)

	STRING  shift 20
	.  error


state 8
	expr : '+' . expr  (27)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 21


state 9
	expr : '-' . expr  (25)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 22


state 10
	expr : '!' . expr  (26)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 23


state 11
	terminator : ';' .  (6)

	.  reduce 6


state 12
	terminator : '\n' .  (7)

	.  reduce 7


state 13
	expr : '(' . expr ')'  (8)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 24


state 14
	expr : '%' .  (34)

	.  reduce 34


state 15
	stmt_list : stmt_list stmt .  (2)

	.  reduce 2


state 16
	stmt : terminator .  (3)

	.  reduce 3


state 17
	stmt : expr . terminator  (4)
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	'|'  shift 25
	'&'  shift 26
	EQ  shift 27
	NE  shift 28
	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	';'  shift 11
	'\n'  shift 12
	.  error

	terminator  goto 41


state 18
	stmt : error terminator .  (5)

	.  reduce 5


state 19
	expr : IDENT '=' . expr  (29)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 42


state 20
	expr : '&' STRING .  (28)

	.  reduce 28


state 21
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)
	expr : '+' expr .  (27)

	.  reduce 27


state 22
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)
	expr : '-' expr .  (25)

	.  reduce 25


state 23
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)
	expr : '!' expr .  (26)

	.  reduce 26


state 24
	expr : '(' expr . ')'  (8)
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	'|'  shift 25
	'&'  shift 26
	EQ  shift 27
	NE  shift 28
	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	')'  shift 43
	.  error


state 25
	expr : expr '|' . expr  (9)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 44


state 26
	expr : expr '&' . expr  (10)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 45


state 27
	expr : expr EQ . expr  (11)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 46


state 28
	expr : expr NE . expr  (12)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 47


state 29
	expr : expr GT . expr  (13)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 48


state 30
	expr : expr GE . expr  (14)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 49


state 31
	expr : expr LT . expr  (15)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 50


state 32
	expr : expr LE . expr  (16)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 51


state 33
	expr : expr L_SHIFT . expr  (17)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 52


state 34
	expr : expr R_SHIFT . expr  (18)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 53


state 35
	expr : expr '+' . expr  (19)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 54


state 36
	expr : expr '-' . expr  (20)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 55


state 37
	expr : expr '*' . expr  (21)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 56


state 38
	expr : expr '/' . expr  (22)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 57


state 39
	expr : expr EXP . expr  (23)

	INT  shift 3
	FLOAT  shift 4
	STRING  shift 5
	IDENT  shift 6
	'&'  shift 7
	'+'  shift 8
	'-'  shift 9
	'!'  shift 10
	'('  shift 13
	'%'  shift 14
	.  error

	expr  goto 58


state 40
	expr : expr '!' .  (24)

	.  reduce 24


state 41
	stmt : expr terminator .  (4)

	.  reduce 4


state 42
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)
	expr : IDENT '=' expr .  (29)

	'|'  shift 25
	'&'  shift 26
	EQ  shift 27
	NE  shift 28
	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	';'  reduce 29
	'\n'  reduce 29
	')'  reduce 29


state 43
	expr : '(' expr ')' .  (8)

	.  reduce 8


state 44
	expr : expr . '|' expr  (9)
	expr : expr '|' expr .  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	'&'  shift 26
	EQ  shift 27
	NE  shift 28
	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 9
	';'  reduce 9
	'\n'  reduce 9
	')'  reduce 9


state 45
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr '&' expr .  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	EQ  shift 27
	NE  shift 28
	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 10
	'&'  reduce 10
	';'  reduce 10
	'\n'  reduce 10
	')'  reduce 10


state 46
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr EQ expr .  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 11
	'&'  reduce 11
	EQ  reduce 11
	NE  reduce 11
	';'  reduce 11
	'\n'  reduce 11
	')'  reduce 11


state 47
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr NE expr .  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	GT  shift 29
	GE  shift 30
	LT  shift 31
	LE  shift 32
	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 12
	'&'  reduce 12
	EQ  reduce 12
	NE  reduce 12
	';'  reduce 12
	'\n'  reduce 12
	')'  reduce 12


state 48
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr GT expr .  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 13
	'&'  reduce 13
	EQ  reduce 13
	NE  reduce 13
	GT  reduce 13
	GE  reduce 13
	LT  reduce 13
	LE  reduce 13
	';'  reduce 13
	'\n'  reduce 13
	')'  reduce 13


state 49
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr GE expr .  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 14
	'&'  reduce 14
	EQ  reduce 14
	NE  reduce 14
	GT  reduce 14
	GE  reduce 14
	LT  reduce 14
	LE  reduce 14
	';'  reduce 14
	'\n'  reduce 14
	')'  reduce 14


state 50
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr LT expr .  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 15
	'&'  reduce 15
	EQ  reduce 15
	NE  reduce 15
	GT  reduce 15
	GE  reduce 15
	LT  reduce 15
	LE  reduce 15
	';'  reduce 15
	'\n'  reduce 15
	')'  reduce 15


state 51
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr LE expr .  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	L_SHIFT  shift 33
	R_SHIFT  shift 34
	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 16
	'&'  reduce 16
	EQ  reduce 16
	NE  reduce 16
	GT  reduce 16
	GE  reduce 16
	LT  reduce 16
	LE  reduce 16
	';'  reduce 16
	'\n'  reduce 16
	')'  reduce 16


state 52
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr L_SHIFT expr .  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 17
	'&'  reduce 17
	EQ  reduce 17
	NE  reduce 17
	GT  reduce 17
	GE  reduce 17
	LT  reduce 17
	LE  reduce 17
	L_SHIFT  reduce 17
	R_SHIFT  reduce 17
	';'  reduce 17
	'\n'  reduce 17
	')'  reduce 17


state 53
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr R_SHIFT expr .  (18)
	expr : expr . '+' expr  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)

	'+'  shift 35
	'-'  shift 36
	'*'  shift 37
	'/'  shift 38
	EXP  shift 39
	'!'  shift 40
	'|'  reduce 18
	'&'  reduce 18
	EQ  reduce 18
	NE  reduce 18
	GT  reduce 18
	GE  reduce 18
	LT  reduce 18
	LE  reduce 18
	L_SHIFT  reduce 18
	R_SHIFT  reduce 18
	';'  reduce 18
	'\n'  reduce 18
	')'  reduce 18


state 54
	expr : expr . '|' expr  (9)
	expr : expr . '&' expr  (10)
	expr : expr . EQ expr  (11)
	expr : expr . NE expr  (12)
	expr : expr . GT expr  (13)
	expr : expr . GE expr  (14)
	expr : expr . LT expr  (15)
	expr : expr . LE expr  (16)
	expr : expr . L_SHIFT expr  (17)
	expr : expr . R_SHIFT expr  (18)
	expr : expr . '+' expr  (19)
	expr : expr '+' expr .  (19)
	expr : expr . '-' expr  (20)
	expr : expr . '*' expr  (21)
	expr : expr . '/' expr  (22)
	expr : expr . EXP expr  (23)
	expr : expr . '!'  (24)
